Work on seperating IO threads and gameplay function threads.